feat(server): implemeent JWT auth
